# kapsl-engine

./: .dockerignore  MODEL_HARDWARE_MATCHING.md  README.md  REPO_SPLIT.md  install.ps1  install.sh
.github/workflows/: beta-runtime-installers.yml  ci.yml  cleanup-r2-installers.yml  release-desktop-installers.yml  release-docker-images.yml  release-runtime-installers.yml  windows-runtime-check.yml
docker/: .dockerignore  Dockerfile.cpu  Dockerfile.cuda
docs/: kapsl-cli-quickstart.md  kapsl-cli-user-guide.md  media-inference-readiness.md
extensions/: README.md
extensions/local-storage-rag-extension/: README.md  example-config.json  rag-extension.toml
extensions/prompt-transformer-extension/: README.md  connector  example-config.json  rag-extension.toml
extensions/s3-rag-extension/: example-config.json  rag-extension.toml
kapsl-benchmarks/: README.md  bench.py  bench_comprehensive.py  results-kapsl-qwen-batched-decode-c4-20260305.json  results-kapsl-vs-lcpp-20260310-204227.json  results-kapsl-vs-lcpp-c4-20260310-204543.json  results-kapsl-vs-vllm-qwen-after-fixes.json  results-kapsl-vs-vllm-qwen-auto-current-20260308.json  results-kapsl-vs-vllm-qwen-auto-retuned-20260308.json  results-kapsl-vs-vllm-qwen-batched-decode-20260305.json  results-kapsl-vs-vllm-qwen-batched-decode-20260309-173126.json  results-kapsl-vs-vllm-qwen-batched-decode-20260309-195547.json  results-kapsl-vs-vllm-qwen-batched-decode-20260309-195952.json  results-kapsl-vs-vllm-qwen-batched-decode-20260309-201236.json  results-kapsl-vs-vllm-qwen-batched-decode-20260309-201453.json  results-kapsl-vs-vllm-qwen-batched-decode-20260309-202426.json  results-kapsl-vs-vllm-qwen-batched-decode-20260309-210932.json  results-kapsl-vs-vllm-qwen-batched-decode-20260309-224513.json  results-kapsl-vs-vllm-qwen-batched-decode-20260310-195710.json  results-kapsl-vs-vllm-qwen-capped64.json  results-kapsl-vs-vllm-qwen-manual-current-20260308.json  results-kapsl-vs-vllm-qwen-more-requests-20260305.json  results-kapsl-vs-vllm-qwen-release-best-20260305.json  results-kapsl-vs-vllm-qwen-rss-20260307.json  results-kapsl-vs-vllm-qwen.json  results-session-20260310-205729.json  results-vllm-qwen.json  run_bench_multipass.sh  run_kapsl_vs_vllm_qwen.sh  run_linux_bench.sh  run_multipass_bench.sh  smoke-kapsl-vllm.json  tmp-batch4_micro8_qd1.json  tmp-batch8_micro4_qd1.json  tmp-batch8_micro8_qd1.json  tmp-batched-decode-c1.json  tmp-batched-decode-c4.json  tmp-default.json  tmp-micro1_qd0-c4.json  tmp-micro8_qd1-c4.json  (+2 more)
kapsl-benchmarks/payloads/: kapsl_string.json  kapsl_tensor.json  vllm_chat.json
kapsl-runtime/: .gitignore  Cargo.toml  DEVELOPER_GUIDE.md  FULL_DOCUMENTATION.md  README.md  STREAMING_GUIDE.md
kapsl-runtime/.cargo/: config.toml
kapsl-runtime/.cargo/stubs/: glibc_compat.c
kapsl-runtime/benchmarks/: benchmark_comparison.py  benchmark_optimization.sh  benchmark_production.sh  benchmark_python_client.py  benchmark_python_inference.py  benchmark_real_inference.py  hybrid_bench.py  llm_bench.py  pyo3_bench.py  quick_bench.py  shm_bench.py
kapsl-runtime/benchmarks/native-hybrid-client/: Cargo.toml
kapsl-runtime/benchmarks/native-hybrid-client/src/: main.rs
kapsl-runtime/benchmarks/shm-bench-native/: Cargo.toml
kapsl-runtime/benchmarks/shm-bench-native/src/: main.rs
kapsl-runtime/crates/kapsl-cli/: Cargo.toml  build.rs  compat_glibc.c  posix_memalign_compat.c  posix_memalign_compat.h
kapsl-runtime/crates/kapsl-cli/src/: app_support.rs  http_extensions.rs  http_models.rs  http_static.rs  infer_adapter.rs  main.rs  packaging.rs
kapsl-runtime/crates/kapsl-cli/src/app/: cli.rs  constants.rs  mod.rs  support.rs
kapsl-runtime/crates/kapsl-cli/src/features/: auth.rs  control.rs  extensions.rs  infer_adapter.rs  mod.rs  rag.rs
kapsl-runtime/crates/kapsl-cli/src/features/packaging/: auth.rs  build.rs  commands.rs  context.rs  mod.rs  oci.rs  remote.rs  target.rs  temp.rs  transfer.rs  types.rs
kapsl-runtime/crates/kapsl-cli/src/features/packaging/context/: axes.rs  builder.rs  files.rs  manifest.rs  mod.rs  prompts.rs
kapsl-runtime/crates/kapsl-cli/src/http/: auth.rs  engine.rs  metrics.rs  mod.rs  rag.rs  system.rs
kapsl-runtime/crates/kapsl-cli/src/http/models/: infer.rs  infer_stream.rs  lifecycle.rs  mod.rs  reader.rs  scaling.rs  swap.rs
kapsl-runtime/crates/kapsl-cli/src/runtime/: autoscaler.rs  config.rs  mod.rs  model.rs  monitor.rs  shared_kv.rs  support.rs  tuning.rs  worker.rs
kapsl-runtime/crates/kapsl-cli/src/tests/: gguf_auto_sizing_tests.rs  http_route_tests.rs  infer_adapter_tests.rs  inter_model_relay_tests.rs  mod.rs  oci_remote_tests.rs  packaging_tests.rs  security_tests.rs  state_layout_tests.rs
kapsl-runtime/docs/: authentication.md  configuration.md  deployment.md  extensions.md  http-api.md  index.md  model-packaging.md  web-dashboard.md
kapsl-runtime/examples/: concurrent_simple.py  example_llm_streaming.py  test_simple.py  test_socket_simple.py
kapsl-runtime/extensions/connector.azure-blob/: README.md  example-config.json  rag-extension.toml  requirements.txt
kapsl-runtime/extensions/connector.azure-blob/src/: connector.py
kapsl-runtime/extensions/connector.s3/: README.md
kapsl-runtime/patches/kapsl-llm/: .cargo_vcs_info.json  Cargo.toml
kapsl-runtime/scripts/: benchmark_http_infer.py  test_deployment.py  test_inference_llama_gpt.py  test_pyo3_single.py  test_shm_client.py  test_socket.py  validate_all_features.py
kapsl-runtime/ui/: app.js  index.html  styles.css
testing-inference/: .gitignore  benchmark.py  frag.csv  frag_multi.csv  generate_payloads_for_models.py  mock_runtime.py  run_benchmark.sh  test_concurrent_gemma_kokoro.py  test_cpu_queue_depth_http.py  test_deepseek_chat.py  test_deepseek_inference.py  test_deepseek_llm_chat.py  test_gemma_llm_chat.py  test_gpt_llm_chat.py  test_infer_stream.py  test_inference.py  test_inference_corrected.py  test_inference_http.py  test_kokoro_tts.py  test_llama_llm_chat.py  test_media_infer.py  test_memory_fragmentation.py  test_memory_fragmentation_llm.py  test_rag.py
(+6 files in other folders)
