[workspace]
members = [
    "crates/kapsl-cli",
]
exclude = [
    "patches/esaxx-rs",
]

resolver = "2"

[patch.crates-io]
esaxx-rs = { path = "patches/esaxx-rs" }
llama-cpp-2 = { git = "https://github.com/kapsl-runtime/kapsl-sdk.git", branch = "develop" }
llama-cpp-sys-2 = { git = "https://github.com/kapsl-runtime/kapsl-sdk.git", branch = "develop" }
