[package]
name = "native-hybrid-client"
version = "0.1.0"
edition = "2021"

[dependencies]
kapsl-shm = { path = "../../crates/kapsl-shm" }
kapsl-ipc = { path = "../../crates/kapsl-ipc" }
kapsl-transport = { path = "../../crates/kapsl-transport" }
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
clap = { version = "4", features = ["derive"] }
