[package]
name = "shm-bench-native"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shm_bench_native"
path = "src/main.rs"

[dependencies]
kapsl-shm = { git = "https://github.com/kapsl-runtime/kapsl-sdk.git", branch = "feature/memory-isolation", package = "kapsl-shm" }
kapsl-engine-api = { git = "https://github.com/kapsl-runtime/kapsl-sdk.git", branch = "feature/memory-isolation", package = "kapsl-engine-api" }
kapsl-transport = { git = "https://github.com/kapsl-runtime/kapsl-sdk.git", branch = "feature/memory-isolation", package = "kapsl-transport" }
bincode = "1.3"
libc = "0.2"
clap = { version = "4.0", features = ["derive"] }
