[package]
name = "kapsl"
version = "0.1.11"
edition = "2021"

[features]
default = []
infer-adapter-echo = []

[dependencies]
kapsl-core = { git = "https://github.com/kapsl-runtime/kapsl-sdk.git", branch = "feature/memory-isolation", package = "kapsl-core" }
kapsl-hal = { git = "https://github.com/kapsl-runtime/kapsl-sdk.git", branch = "feature/memory-isolation", package = "kapsl-hal" }
kapsl-engine-api = { git = "https://github.com/kapsl-runtime/kapsl-sdk.git", branch = "feature/memory-isolation", package = "kapsl-engine-api" }
kapsl-backends = { git = "https://github.com/kapsl-runtime/kapsl-sdk.git", branch = "feature/memory-isolation", package = "kapsl-backends" }
kapsl-scheduler = { git = "https://github.com/kapsl-runtime/kapsl-sdk.git", branch = "feature/memory-isolation", package = "kapsl-scheduler" }
kapsl-ipc = { git = "https://github.com/kapsl-runtime/kapsl-sdk.git", branch = "feature/memory-isolation", package = "kapsl-ipc" }
kapsl-monitor = { git = "https://github.com/kapsl-runtime/kapsl-sdk.git", branch = "feature/memory-isolation", package = "kapsl-monitor" }
kapsl-transport = { git = "https://github.com/kapsl-runtime/kapsl-sdk.git", branch = "feature/memory-isolation", package = "kapsl-transport" }
kapsl-shm = { git = "https://github.com/kapsl-runtime/kapsl-sdk.git", branch = "feature/memory-isolation", package = "kapsl-shm" }
kapsl-llm = { git = "https://github.com/kapsl-runtime/kapsl-sdk.git", branch = "feature/memory-isolation", package = "kapsl-llm" }
kapsl-rag = { git = "https://github.com/kapsl-runtime/kapsl-sdk.git", branch = "feature/memory-isolation", package = "kapsl-rag" }
kapsl-rag-sdk = { git = "https://github.com/kapsl-runtime/kapsl-sdk.git", branch = "feature/memory-isolation", package = "kapsl-rag-sdk" }
warp = "0.3"
prometheus = "0.14"
parking_lot = "0.12"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
futures = "0.3"
serde_yaml = "0.9"
async-trait = "0.1"
sysinfo = "0.30"
flate2 = "1.0"
tar = "0.4"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "tiff", "webp"] }
ureq = { version = "=3.1.4", default-features = false, features = ["native-tls"] }
rand = "0.8"
sha2 = "0.10"
rust-embed = "8.0"
mime_guess = "2.0"
