[package]
name = "kapsl"
version = "0.1.16"
edition = "2021"

[features]
# Default build is portable: CPU/standard backends only, no CUDA toolkit required.
default = []
native = ["kapsl-backends/native"]
gguf-native = ["kapsl-backends/gguf-native"]
gguf-cuda = ["kapsl-backends/gguf-cuda", "kapsl-llm/gguf-cuda"]
gguf-cuda-shared-kv = ["kapsl-backends/gguf-cuda-shared-kv", "kapsl-llm/gguf-cuda-shared-kv"]
cuda = ["gguf-cuda"]
# Run PyTorch-family models via an out-of-process Python sidecar (no native
# libtorch dep). Models with manifest framework "pytorch" route to PyTorchBackend.
pytorch = ["kapsl-backends/pytorch"]
infer-adapter-echo = []

[build-dependencies]
cc = "1"

[dependencies]
kapsl-core = "0.1.0"
kapsl-hal = "0.1.0"
kapsl-engine-api = "0.1.0"
kapsl-backends = "0.1.0"
kapsl-scheduler = "0.1.0"
kapsl-ipc = "0.1.0"
kapsl-monitor = "0.1.0"
kapsl-transport = "0.1.0"
kapsl-shm = "0.1.0"
kapsl-llm = "0.1.0"
kapsl-rag = "0.1.0"
kapsl-rag-sdk = "0.1.0"
warp = "0.3"
prometheus = "0.14"
parking_lot = "0.12"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
futures = "0.3"
serde_yaml = "0.9"
async-trait = "0.1"
sysinfo = "0.30"
flate2 = "1.0"
tar = "0.4"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "tiff", "webp"] }
ureq = { version = "=3.1.4", default-features = false, features = ["native-tls", "rustls"] }
rand = "0.8"
sha2 = "0.10"
rust-embed = "8.0"
mime_guess = "2.0"
dirs = "6.0.0"
